@@ -32,6 +32,18 @@
         <version>5.11.0</version>
         <scope>test</scope>
     </dependency>
+    
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.10.1</version>
+    </dependency>
+    
+    <dependency>
+    	<groupId>net.bytebuddy</groupId>
+    	<artifactId>byte-buddy</artifactId>
+    	<version>1.14.12</version>
+	</dependency>
   </dependencies>
   
   <build>
@@ -42,6 +54,11 @@
           <version>3.2.5</version>
           <configuration>
               <groups>${groups}</groups>
+              <argLine>
+                    -XX:+EnableDynamicAgentLoading
+                    --add-opens java.base/java.lang=ALL-UNNAMED
+                    -Dnet.bytebuddy.experimental=true
+              </argLine>
           </configuration>
       </plugin>
     </plugins>
